<project xmlns="http://maven.apache.org/POM/4.0.0"	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nova</groupId>
	<artifactId>nova-components</artifactId>
	<version>0.1.0-SNAPSHOT</version>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<waffle.version>1.8.1</waffle.version>

	</properties>
	<dependencies>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.nova</groupId>
			<artifactId>nova-core</artifactId>
			<version>0.1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.jetty</groupId>
		    <artifactId>jetty-http</artifactId>
		    <version>11.0.24</version>
		</dependency>		
		<dependency>
		  	<groupId>org.eclipse.jetty.websocket</groupId>
			<artifactId>websocket-jetty-server</artifactId>
	    	<version>11.0.24</version>
		</dependency>
		<dependency>
		  <groupId>org.eclipse.jetty.websocket</groupId>
		  <artifactId>websocket-jetty-api</artifactId>
	    	<version>11.0.24</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
		<dependency>
		  <groupId>com.github.luben</groupId>
		  <artifactId>zstd-jni</artifactId>
		  <version>1.5.2-5</version> <!-- Use latest version -->
		</dependency>
		<dependency>
			<groupId>net.jpountz.lz4</groupId>
			<artifactId>lz4</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.5.5</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>1.5.5</version>
		</dependency>
		<dependency>
			<groupId>com.nixxcode.jvmbrotli</groupId>
			<artifactId>jvmbrotli</artifactId>
			<version>0.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.mwiede</groupId>
			<artifactId>jsch</artifactId>
			<version>0.2.16</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.10.0</version>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>9.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>6.1.0.jre8</version>
		</dependency>

		<dependency>
			<groupId>jcifs</groupId>
			<artifactId>jcifs</artifactId>
			<version>1.3.17</version>
		</dependency>
		<dependency>
			<groupId>com.github.dblock.waffle</groupId>
			<artifactId>waffle-jna</artifactId>
			<version>${waffle.version}</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch.agentproxy.pageant</artifactId>
			<version>0.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch.agentproxy.core</artifactId>
			<version>0.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch.agentproxy.connector-factory</artifactId>
			<version>0.0.9</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch.agentproxy.jsch</artifactId>
			<version>0.0.9</version>
		</dependency>
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>20020423</version>
		</dependency>
		<dependency>
		    <groupId>com.azure</groupId>
		    <artifactId>azure-communication-email</artifactId>
		    <version>1.0.17</version>
		</dependency>
		<dependency>
		    <groupId>com.azure</groupId>
		    <artifactId>azure-communication-sms</artifactId>
		    <version>1.1.29</version>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>22</source>
					<target>22</target>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>